--- a/part/basis.tex
+++ b/part/basis.tex
@@ -2,18 +2,53 @@
 
 \subsection{Критерии защищенности БД}
 
-\paragraph{Критерии оценки надежных компьютерных систем (TCSEC)}
-\paragraph{Понятие политики безопасности}
-\paragraph{Совместное применение различных политик безопасности в рамках единой модели}
-\paragraph{Интерпретация TCSEC для надежных СУБД (TDI)}
-\paragraph{Оценка надежности СУБД как компоненты вычислительной системы}
-\paragraph{Монитор ссылок}
-\paragraph{Применение TCSEC к СУБД непосредственно}
-\paragraph{Элементы СУБД, к которым применяются TDI: метки, аудит, архитектура системы, спецификация, верификация, проектная документация}
-\paragraph{Критерии безопасности ГТК}
+\subsubsection{Критерии оценки надежных компьютерных систем (TCSEC)}
+<<Критерии безопасности компьютерных систем>> (Trusted Computer System Evaluation Criteria), получившие неформальное название <<Оранжевая книга>>, были разработаны Министерством обороны США в 1983 году с целью определения требований безопасности, предъявляемых к аппаратному, программному и специальному обеспечению компьютерных систем и выработки соответствующей методологии и технологии анализа степени поддержки политики безопасности в компьютерных системах военного назначения. В данном документе были впервые нормативно определены такие понятия, как <<политика безопасности>>, <<ядро безопасности>> (ТСВ) и т.д.
 
+Предложенные в этом документе концепции защиты и набор функциональных требований послужили основой для формирования всех появившихся впоследствии стандартов безопасности.
+
+В <<Оранжевой книге>> предложены три категории требований безопасности -- политика безопасности, аудит и корректность, в рамках которых сформулированы шесть базовых требований безопасности. Первые четыре требования направлены непосредственно на обеспечение безопасности информации, а два последних -- на качество самих средств защиты.
+
+Рассмотрим эти требования подробнее:
+
+\begin{enumerate}
+	\item Политика безопасности
+	\begin{itemize}
+		\item \textbf{Политика безопасности}
+		Система должна поддерживать точно определённую политику безопасности. Возможность осуществления субъектами доступа к объектам должна определяться на основе их идентификации и набора правил управления доступом. Там, где необходимо, должна использоваться политика нормативного управления доступом, позволяющая эффективно реализовать разграничение доступа к категорированной информации (информации, отмеченной грифом секретности — типа "секретно", "сов. секретно" и т.д.).
+		\item \textbf{Метки} С объектами должны быть ассоциированы метки безопасности, используемые в качестве атрибутов контроля доступа. Для реализации нормативного управления доступом система должна обеспечивать возможность присваивать каждому объекту метку или набор атрибутов, определяющих  степень конфиденциальности (гриф секретности) объекта и/или режимы доступа к этому объекту.
+	\end{itemize}
+	\item Аудит
+	\begin{itemize}
+		\item \textbf{Идентификация и аутентификация} Все субъекты должен иметь уникальные идентификаторы. Контроль доступа должен осуществляться на основании результатов идентификации субъекта и объекта доступа, подтверждения подлинности их идентификаторов (аутентификации) и правил разграничения доступа. Данные, используемые для идентификации и аутентификации, должны быть защищены от несанкционированного доступа, модификации и уничтожения и должны быть ассоциированы со всеми активными компонентами компьютерной системы, функционирование которых критично с точки зрения безопасности.
+		\item \textbf{Регистрация и учет} Для определения степени ответственности пользователей за действия в системе, все происходящие в ней события, имеющие значение с точки зрения безопасности, должны отслеживаться и регистрироваться в защищенном протоколе. Система регистрации должна осуществлять анализ общего потока событий и выделять из него только те события, которые оказывают влияние на безопасность для сокращения объема протокола и повышения эффективность его анализа. Протокол событий должен быть надежно защищен от несанкционированного доступа, модификации и уничтожения.
+	\end{itemize}
+	\item Корректность
+	\begin{itemize}
+		\item \textbf{Контроль корректности} Средства защиты должны содержать независимые аппаратные и/или программные компоненты, обеспечивающие работоспособность функций защиты. Это означает, что все средства защиты, обеспечивающие политику безопасности, управление атрибутами и метками безопасности, идентификацию и аутентификацию, регистрацию и учёт, должны находиться под контролем средств, проверяющих корректность их функционирования. Основной принцип контроля корректности состоит в том, что средства контроля должны быть полностью независимы от средств защиты.
+		\item \textbf{Непрерывность защиты} Все средства защиты (в т.ч. и реализующие данное требование) должны быть защищены от несанкционированного вмешательства и/или отключения, причем эта защита должна быть постоянной и непрерывной в любом режиме функционирования системы защиты и компьютерной системы в целом. Данное требование распространяется на весь жизненный цикл компьютерной системы. Кроме того, его выполнение является одним из ключевых аспектов формального доказательства безопасности системы.
+	\end{itemize}	
+\end{enumerate}
+
+\subsubsection{Понятие политики безопасности}
+Политика безопаности -- это набор законов, правил, процедур и норм поведения, определяющих, как организация обрабатывает, защищает и распространяет информацию. Причём, политика безопасности относится к активным методам защиты, поскольку учитывает анализ возможных угроз и выбор адекватных мер противодействия.
+\subsubsection{Совместное применение различных политик безопасности в рамках единой модели[None]}
+\subsubsection{Интерпретация TCSEC для надежных СУБД (TDI)[None]}
+\subsubsection{Оценка надежности СУБД как компоненты вычислительной системы[None]}
+\subsubsection{Монитор ссылок}
+Контроль за выполнением субъектами (пользователями) определённых операций над объектами, путем проверки допустимости обращения (данного пользователя) к программам и данным разрешенному набору действий.
+Обязательные качества для монитора обращений:
+\begin{itemize}
+	\item Изолированность (неотслеживаемость работы)
+	\item Полнота (невозможность обойти)
+	\item Верифицируемость (возможность анализа и тестирования)
+\end{itemize}
+\subsubsection{Применение TCSEC к СУБД непосредственно[None]}
+\subsubsection{Элементы СУБД, к которым применяются TDI: метки, аудит, архитектура системы, спецификация, верификация, проектная документация}
+https://web.archive.org/web/20160303230445/http://ftp.fas.org/irp/nsa/rainbow/tg021.htm
+\subsubsection{Критерии безопасности ГТК}
+https://fstec.ru/component/attachments/download/293
 \subsection{Модели безопасности в СУБД}
-
 \paragraph{Дискреционная (избирательная) и мандатная (полномочная) модели безопасности}
 \paragraph{Классификация моделей}
 \paragraph{Аспекты исследования моделей безопасности}
