--- a/part/concept.tex
+++ b/part/concept.tex
@@ -1,18 +1,63 @@
-\section{Концепция безопасности БД}\footnote{Подробнее: https://cyberleninka.ru/article/v/obobschennaya-model-informatsionnoy-bezopasnosti-sistemy-upravleniya-bazami-dannyh}
+\section{Концепция безопасности БД}
+%\footcite{Al2015}\textcite{Al2015}\nocite{Al2015}
+
 \subsubsection{Понятие безопасности БД}
-\textbf{База данных} -- совокупность данных, хранимых в соответствии со схемой данных, манипулирование которыми выполняют в соответствии с правилами средств моделирования данных.
+Для того чтобы иметь общую точку старта нам придется дать пару определений, я постараюсь быстро разобраться с обязательной копипастой и перейти к делу. Итак:
 
-Если БД рассматривать только как совокупность данных, то можно использовать следующее определение.
+\begin{grayquote}
+	\textbf{База данных}\footnotemark -- это организованная коллекция данных, обычно хранящихся и доступных в электронном виде из компьютерной системы. Там, где базы данных более сложны, они часто разрабатываются с использованием формальных методов проектирования и моделирования.
+\end{grayquote}
 
-\textbf{Безопасность информации [данных]}: Состояние защищенности информации [данных], при котором обеспечены ее [их] конфиденциальность, доступность и целостность.
+\begin{grayquote}
+	\textbf{Система управления базами данных (СУБД)}\footnotemark[\value{footnote}] -- это программное обеспечение, которое взаимодействует с конечными пользователями, приложениями и самой базой данных для сбора и анализа данных. Программное обеспечение СУБД дополнительно включает в себя основные средства, предоставляемые для администрирования базы данных. Общая сумма базы данных, СУБД и связанных приложений может называться «системой базы данных». Часто термин «база данных» также используется для обозначения любой СУБД, системы баз данных или приложения, связанного с базой данных.
+\end{grayquote}
 
-\textbf{Информационная система (ИС)} -- система, предназначенная для хранения, поиска и обработки информации, и соответствующие организационные ресурсы (человеческие, технические, финансовые и т. д.), которые обеспечивают и распространяют информацию.
+Но если вас вдруг спросят, то смело отвечайте:
+\begin{grayquote}
+	Согласно \href{http://www.consultant.ru/cons/cgi/online.cgi?rnd=77B9A55845722924B47D00E78BFA3E50\&req=doc\&base=LAW\&n=329334\&dst=100282\&fld=134#2e1eph4wwt8}{гражданскому кодексу} Российской Федерации (часть четвертая) от 18.12.2006 N 230-ФЗ (ред. от 18.07.2019), базой данных является представленная в объективной форме совокупность самостоятельных материалов (статей, расчетов, нормативных актов, судебных решений и иных подобных материалов), систематизированных таким образом, чтобы эти материалы могли быть найдены и обработаны с помощью электронной вычислительной машины (ЭВМ).
+\end{grayquote}
 
-Если БД рассматривать как информационную систему, то можно использовать следующие определения.
+\footnotetext{Нагло скопипизженно с \href{https://en.wikipedia.org/wiki/Database}{вечно загнивающей}}
 
-\textbf{Безопасность ИС (БД)} можно определить как состояние защищенности ИС от угроз ее нормальному функционированию. Под защищенностью понимается наличие средств ИС и методов их применения, обеспечивающих снижение или ликвидацию негативных последствий, связанных с реализацией угроз. Изложенный подход к определению понятия безопасности ИС предполагает, что перечень и содержание угроз достаточно хорошо определены и достаточно стабильны во времени.
+И если с просто базами данных все более-менее понятно, то в тот момент, когда нам приходиться говорить о вопросах безопасности, все превращается в классическую задачу о двух стульях: как надо и как в законе написано. (Ну или пафосно перефразируя) Вопросы информационной безопасности баз данных целесообразно рассматривать с двух взаимодополняющих позиций \textcite{Al2015}[\textcite{Lihonosov2011}]\footnote{Мне стыдно указывать ресурс, где я взял этот кусок, так что пусть будет \href{http://www.e-biblio.ru/book/bib/01_informatika/b_baz_dan/sg.html\#_Toc327430692}{pornhub}}:
+\begin{itemize}
+	\item оценочные стандарты, направленные на классификацию информационных систем и средств их защиты по требованиям безопасности
+	\item технические спецификации, регламентирующие различные аспекты реализации средств защиты
+\end{itemize} 
 
-\textbf{Безопасность ИС (БД)} можно определить как свойство системы адаптироваться к агрессивным проявлениям среды, в которой функционирует система, обеспечивающее поддержку на экономически оправданном уровне характеристики качества системы. В сформулированном определении основной акцент делается не на перечне и содержании угроз, нейтрализация которых обеспечивается, а на особую характеристику качества системы. При этом основной критерий качества ИС является экономическим, т.е. оценка средств и методов обеспечения безопасности осуществляется на основе затрат на реализацию механизмов безопасности и потенциальных выгод от недопущения ущерба, связанного с целенаправленным или случайным агрессивным проявлением среды.
+Попытка защищать все и сразу обречена на провал, так что довольно логичным кажется сосредоточится на обеспечении безопасности четырех уровней информационной системы:
+\begin{enumerate}
+	\item уровня прикладного программного обеспечения, отвечающего за взаимодействие с пользователем
+	\item уровня системы управления базами данных, обеспечивающего хранение и обработку данных информационной системы
+	\item уровня операционной системы, отвечающего за функционирование СУБД и иного прикладного программного обеспечения
+	\item уровня среды доставки, отвечающего за взаимодействие информационных серверов и потребителей информации
+\end{enumerate}
+
+Теперь уже можно ввести недостающие определения. Я вижу как вы соскучились по определениям\footnote{А эти определения я взял с прошлого года}. 
+\begin{grayquote}
+Если БД рассматривать только как совокупность данных, то можно использовать следующее определения:
+\begin{itemize}
+	\item \textbf{Безопасность информации [данных]}: Состояние защищенности информации [данных], при котором обеспечены ее [их] конфиденциальность, доступность и целостность.
+	\item \textbf{Информационная система (ИС)} -- система, предназначенная для хранения, поиска и обработки информации, и соответствующие организационные ресурсы (человеческие, технические, финансовые и т. д.), которые обеспечивают и распространяют информацию.
+\end{itemize}
+
+Если БД рассматривать как информационную систему, то можно использовать следующие определения:
+\begin{itemize}
+	\item \textbf{Безопасность ИС (БД)} можно определить как состояние защищенности ИС от угроз ее нормальному функционированию. Под защищенностью понимается наличие средств ИС и методов их применения, обеспечивающих снижение или ликвидацию негативных последствий, связанных с реализацией угроз. Изложенный подход к определению понятия безопасности ИС предполагает, что перечень и содержание угроз достаточно хорошо определены и достаточно стабильны во времени.
+	
+	\item \textbf{Безопасность ИС (БД)} можно определить как свойство системы адаптироваться к агрессивным проявлениям среды, в которой функционирует система, обеспечивающее поддержку на экономически оправданном уровне характеристики качества системы. В сформулированном определении основной акцент делается не на перечне и содержании угроз, нейтрализация которых обеспечивается, а на особую характеристику качества системы. При этом основной критерий качества ИС является экономическим, т.е. оценка средств и методов обеспечения безопасности осуществляется на основе затрат на реализацию механизмов безопасности и потенциальных выгод от недопущения ущерба, связанного с целенаправленным или случайным агрессивным проявлением среды.
+\end{itemize}
+\end{grayquote}
+
+Ну и не одно введение не может обойтись без заклинания
+\begin{grayquote}
+	Проблема обеспечения безопасности автоматизированных информационных систем может быть определена как решение трех взаимосвязанных задач по реализации требуемого уровня:
+	\begin{itemize}
+		\item \textbf{конфиденциальности} -- обеспечения пользователям доступа только к данным, для которых пользователь имеет явное или неявное разрешение на доступ
+		\item \textbf{целостности} -- обеспечения защиты от преднамеренного или непреднамеренного изменения информации или процессов ее обработки
+		\item \textbf{доступности} -- обеспечения возможности авторизованным в системе пользователям доступа к информации в соответствии с принятой технологией
+	\end{itemize}
+\end{grayquote}
 
 \subsubsection{Угрозы безопасности БД: общие и специфичные}
 \textbf{Угрозой информационной безопасности} автоматизированный информационной системе (АИС) назовем возможность воздействия на информацию, обрабатываемую в системе, приводящего к искажению, уничтожению, копированию, блокированию доступа к информации, а также возможность воздействия на компоненты информационной системы, приводящего к утрате, уничтожению или сбою функционирования носителя информации или средства управления программно-аппаратным комплексом системы.
@@ -63,7 +108,7 @@
 		\end{itemize}
 \end{enumerate}
 
-\subsubsection{Требования безопасности БД}
+\subsubsection{Требования безопасности БД}\footnote{Прошлый год}
 На основании угроз можно выделить следующий список требований к безопасности БД:
 \begin{itemize}
 	\item Функционирование в доверенной среде. Под доверенной средой следует понимать инфраструктуру предприятия и ее защитные механизмы, обусловленные политиками безопасности. Таким образом, речь идет о функционировании СУБД в соответствии с правилами безопасности, применяемыми и ко всем прочим системам предприятия
@@ -77,7 +122,7 @@
 	\item Безопасная организация и работа с данными. Вопрос организации данных и управления ими является ключевым в системах хранения информации. В эту область входят задачи организации данных с контролем целостности и другие, специфичные для СУБД проблемы безопасности. Фактически эта задача включает в себя основной объем зависящих от данных уязвимостей и защиты от них
 \end{itemize}
 
-\subsubsection{Защита от несанкционированного доступа}
+\subsubsection{Защита от несанкционированного доступа}\footnote{Прошлый год}
 К основным средствам защиты информации относят следующие:
 \begin{itemize}
 	\item идентификация и аутентификации
@@ -90,12 +135,15 @@
 
 В целях контроля использования основных ресурсов СУБД во многих системах имеются средства установления прав доступа к объектам БД. Права доступа определяют возможные действия над объектами. Владелец объекта, а также администратор БД имеют все права. Остальные пользователи к разным объектам могут иметь различные уровни доступа.
 
-К данным, имеющимся в таблице, могут применяться меры защиты по отношению к отдельным полям и отдельным записям. В реляционных СУБД отдельные записи специально не защищаются. Применительно к защите данных в полях таблицы можно выделить такие уровни прав доступа, как полный запрет доступа, только чтение, разрешение всех операций (просмотр, ввод новых значений, удаление, изменение).
-Более мощным средством защиты данных является их шифрование. Для расшифрования информации пользователи, имеющие санкционированный доступ к зашифрованным данным, имеют ключ и алгоритм расшифрования.
+К данным, имеющимся в таблице, могут применяться меры защиты по отношению к отдельным полям и отдельным записям. В реляционных СУБД отдельные записи специально не защищаются. Применительно к защите данных в полях таблицы можно выделить такие уровни прав доступа, как полный запрет доступа, только чтение, разрешение всех операций (просмотр, ввод новых значений, удаление, изменение). Более мощным средством защиты данных является их шифрование. Для расшифрования информации пользователи, имеющие санкционированный доступ к зашифрованным данным, имеют ключ и алгоритм расшифрования.
 
 Итак, для минимизации риска несанкционированного доступа необходима реализация комплекса нормативных, организационных и технических защитных мер, в первую очередь: введение ролевого управления доступа, организация доступа пользователей по предъявлению сертификата, выборочное шифрование для сегментов базы данных.
 
-\subsubsection{Защита от вывода[None]}
+\subsubsection{Защита от вывода}\footnote{Взял href{http://www.e-biblio.ru/book/bib/01\_informatika/b\_baz\_dan/sg.html}{здесь}}
+
+Логический вывод на основе функциональных зависимостей. Пусть дана схема отношения: $R(A_1, \ldots, A_n)$. Пусть $U = (A_1, \ldots, A_n)$, $X$, $Y$ -- подмножества из $U$. Говорят, что Х функционально определяет Y, если в любом отношении $r$ со схемой $R(A_1, \ldots, A_n)$ не могут содержаться два кортежа с одинаковыми значениями атрибутов из Х, с различными из Y. В этом случае имеет место функциональная зависимость, обозначаемая . Пример функциональной зависимости для схемы отношения (фамилия, имя, отчество, должность, зарплата): если должность = менеджер, то зарплата = $1200$. В реальных базах данных при наличии сведений о функциональных зависимостях злоумышленник может вывести конфиденциальную информацию при наличии доступа только к части отношений, составляющих декомпозированное отношение.
+
+Логический вывод на основе ограничений целостности. Для кортежей отношений в реляционной модели данных (РМД) можно задать ограничения целостности — логические условия, которым должны удовлетворять атрибуты кортежей. Причем ограничение целостности может быть задано в виде предиката на всем множестве атрибутов кортежа. В случае попытки изменения данных в таблице, СУБД автоматически вычисляет значение этого предиката, и в зависимости от его истинности операция разрешается или отвергается. Выполняя многократные изменения данных и анализируя реакцию системы, злоумышленник может получить те сведения, к которым у него отсутствует непосредственный доступ. Также к этому виду угроз конфиденциальности относится анализ значений первичных/внешних ключей.
 
 \subsubsection{Целостность БД}
 Целостность базы данных -- соответствие имеющейся в базе данных информации её внутренней логике, структуре и всем явно заданным правилам. Каждое правило, налагающее некоторое ограничение на возможное состояние базы данных, называется ограничением целостности.
@@ -107,7 +155,7 @@
 	\item Ограничением базы данных называется ограничение на значения, которые разрешено принимать указанной базе данных.
 	\item Ограничением переменной отношения называется ограничение на значения, которые разрешено принимать указанной переменной отношения.
 	\item Ограничением атрибута называется ограничение на значения, которые разрешено принимать указанному атрибуту.
-	\item Ограничение типа представляет собой не что иное, как определение множества значений, из которых состоит данный тип.\footnote{Подробнее про ограничения: https://studfiles.net/preview/6354061/page:55/}
+	\item Ограничение типа представляет собой не что иное, как определение множества значений, из которых состоит данный тип.\footnote{Подробнее про ограничения: https://studfiles.net/preview/6354061/page:55/ (Блядский роскомнадзор будет ругаться, но вас это пугать не должно)}
 \end{itemize}
 
 \subsubsection{Аудит}
