--- a/db.tex
+++ b/db.tex
@@ -1,14 +1,19 @@
 \documentclass[a4paper,10pt]{article}
 \input{preamble}
+\addbibresource{bibliography.bib}
 \title{Основы построения защищенных баз данных}
 \author{Ваша команда по спасению компьютерной безопасности}
 \date{\today}
 
 \begin{document}
 \maketitle
+\epigraph{Самый надежный в мире алгоритм \\
+	Всегда делать исключительно то, что горит \\
+	В самый прекрасный последний момент \\
+	Ведь для самых важных дел в принципе лучше времени нет}{Anacondaz - Факап}
 \tableofcontents
 \input{part/concept}
-%\input{part/basis}
+\input{part/basis}
 %\input{part/integrity}
 %\input{part/confidentiality}
 %\input{part/availability}
@@ -16,4 +21,6 @@
 %\input{part/statistical}
 %\input{part/intrusion}
 %\input{part/security}
+\input{part/ref}
+\printbibliography
 \end{document}
